2011-02-20  Christopher Roy Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/edge/hot-spot.jl: small string-change

	* lisp/sawfish/wm/autoload.jl
	* lisp/sawfish/wm/keymaps.jl
	* lisp/sawfish/wm/tabs/tabgroup.jl: add maybe-raise-tab-function,
	rather than using a lambda in tabbar keymap (no tooltip then)

	* KEYBINDINGS: updated

	* man/sawfish.texi: added doc for toggle-or-exec
	                    EdgeActions docs
	                    - EdgeFlip
			    - ViewportDrag
			    - HotSpots
			    - example configuration
			    -- (complete, but not perfect)

2011-02-19  Christopher Roy Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/edge/actions.jl
	* lisp/sawfish/wm/edge/utils.jl: improved two strings

	* lisp/sawfish/wm/frames.jl
	* lisp/sawfish/wm/tabs/tabgroup.jl: renamed adjustment-title to
	adjust-title

2011-02-18  Christopher Roy Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/workspace.jl
	* lisp/sawfish/wm/tabs/tabgroup.jl: - support tabbed windows in
	send-to/copy-to-next/previous-workspace
	- add tab-group-window-index function
	- don't add a window to tabgroup, if it already exists on another
	workspace
	-- [fuchur]

	* lisp/sawfish/wm/keymaps.jl: more natural keymap for raise-lower-button
	-- [fuchur]

	* themes/StyleTab/theme.jl: - make use of tab-group-window-index
	- update send-to-prev/next button after action performed
	-- [fuchur]

2011-02-16  Christopher Roy Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/tabs/tabgroup.jl: - make sure we only call the
	tab-hooks if the window is actually tabbed
	- in tab-refresh-group rename the reframe-style property to style
	- use reframe-window rather than rebuild-frame in tab-refresh-group for type property
	- make tab-group-window with non-click focus-modes work (regression)
	- make sure already tabbed windows, can be added to a different tab-group
	-- [fuchur]

	* lisp/sawfish/wm/keymaps.jl: improved default bindings for tabbar [fuchur]
