@@ -1,3 +1,8 @@
+2011-02-21  Christopher Roy Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/tabs/tabgropu.jl: make opaque move and
+	resize animator work with tabbed windows. Improved various functions
+	tab-refresh-group, tab-group-window, tab-put-window-in-group [fuchur]
+
 2011-02-20  Christopher Roy Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/edge/hot-spot.jl: small string-change
 
